--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Tron</title>
     <style>
     body{
         margin: 0;
@@ -13,6 +13,18 @@
     </style>
 </head>
 <body>
+
+    <div id="app">
+        <div v-if="!yaInicio">
+            <h1 v-if="!color">{{ message }}</h1>
+            <input type="text" @change="onCambioNombre"/>
+            <input type="color" @change="onCambioColor" />
+            <button @click="onIniciar">Iniciar</button>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
     <script src="./src/main.js"></script>
